# makeschool

./: .eslintrc.json  README.md  generateGallery.sh  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
Courses/ACE/: README.md  _sidebar.md  index.html
Courses/ARCHIVE-CS-1-Programming-Fundamentals/: .gitignore  sales_data.txt
Courses/ARCHIVE-CS-2-Tweet-Generator/: Class10.md  Class11.md  Class3.md  Class9.md
Courses/ARCHIVE-CS-3-Core-Data-Structures/: Class1.md  Class11.md  Class17.md  Class7.md
Courses/ARCHIVE-CS-4-Advanced-Data-Structures/: Setup.md
Courses/ARCHIVE-DS-1-Data-Analysis/: 03.5__Converting_Z-scores_to_Probability.ipynb  03__Normal_Distribution_and_CLT.ipynb  04_Outlier_Detection_Sample_Size_&_Confidence_Intervals.ipynb  Installation_Instructions.md  README.md
Courses/ARCHIVE-DS-2-Machine-Learning/: 02_K_Nearest_Neighbors.ipynb  03_Naive_Bayesian_Classifiers.ipynb  04_Regression_Techniques.ipynb
Courses/ARCHIVE-DS-3-Deep-Learning/: ReadMe.md
Courses/ARCHIVE-MOB-5-Advanced-Mobile-App-Development/: Readme.md
Courses/ARCHIVE-SPD-2.4-Job-Search-and-Interview-Practice/: README.md  _navbar.md
Courses/ARCHIVE-WEB-5-Advanced-CSS/: README.md
Labs/litebrite-client/: main.py  pyproject.toml
mediabook/: docusaurus.config.js  generateGallery.sh  package-lock.json  package.json  sidebars.js  tailwind.config.js  tutorial
pages/: _app.tsx  _document.tsx  index.tsx
site/: .eslintrc.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
(+5394 files in other folders)
