[tool.poetry]
name = "litebrite-client"
version = "1.0.0"
description = "Interact with the real-time Lite Brite board @ https://litebrite.live!"
authors = ["Dani Roxberry <dani@makeschool.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pusher = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
